Fix bugs in images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="public/icons/cp.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio | Carlos Blanco</title>
+        <title>Carlos Javier Blanco Moreira</title>
     </head>
     <body class="h-full w-full p-4 bg-slate-100">
         <div id="root"></div>
